# clipchan

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README  README.md  backend.Dockerfile  clipchan.toml  frontend.Dockerfile
.github/workflows/: release.yml
bilive/: .gitignore  Cargo.toml
bilive/src/: appkey.rs  client.rs  lib.rs  live.rs  session.rs  user.rs  wbi.rs
bilive/src/bapi/: base.rs  live.rs  login.rs  mod.rs  user.rs
src/: config.rs  main.rs
src/api/: admin.rs  clip.rs  live.rs  mod.rs  playlist.rs  user.rs
src/core/: jwt.rs  mod.rs  storage.rs  streamer.rs
src/core/entity/: clip.rs  mod.rs  playlist.rs  playlist_item.rs  user.rs
src/core/entity/migration/src/: lib.rs  m20250601_000001_create_user.rs  m20250601_000002_create_table.rs  m20250601_000003_create_playlists.rs  m20250627_000001_add_user_permissions.rs
src/data/: clip.rs  mod.rs  playlist.rs  user.rs
src/server/: auth.rs  mod.rs  server.rs
src/service/: clip.rs  errors.rs  live.rs  mod.rs  playlist.rs  user.rs
src/storage/: local.rs  s3.rs
web/: index.html  package.json
web/src/: App.tsx  index.css  vite-env.d.ts
web/src/components/: MainLayout.tsx
web/src/components/AdminRoute/: AdminRoute.css  AdminRoute.tsx
web/src/components/Button/: Button.css  Button.tsx
web/src/components/ContentCard/: ContentCard.css  ContentCard.tsx
web/src/components/PageContainer/: PageContainer.css  PageContainer.tsx
web/src/components/StatusBadge/: StatusBadge.css  StatusBadge.tsx
web/src/components/StreamRoute/: StreamRoute.css  StreamRoute.tsx
web/src/components/UserStatus/: UserStatus.css  UserStatus.tsx
web/src/context/: AppContext.tsx
web/src/pages/: AdminPage.css  AdminPage.tsx  ClipsPage.css  ClipsPage.tsx  EditClipPage.css  EditClipPage.tsx  LoginPage.tsx  PlaylistsPage.css  PlaylistsPage.tsx  ProfilePage.css  ProfilePage.tsx  SettingsPage.css  SettingsPage.tsx  UploadPage.css  UploadPage.tsx
web/src/services/: api.ts
web/src/types/: index.ts
