[package]
name = "bilive"
version = "0.1.2"
edition = "2024"
authors = ["pcmid <plzcmid at gmail dot com>"]
repository = "https://github.com/pcmid/clipchan"
description = "A Rust library for interacting with Bilibili's live streaming services."
license = "MIT"

[dependencies]
md-5 = "0.10.6"
percent-encoding = "2.3"
qrcode = "0.14.1"
reqwest = { version = "0.12.19", features = ["json","cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
delegate = "0.13.3"
cookie_store = "0.21.1"
reqwest_cookie_store = { version = "0.8.0", features = ["serde"] }
rand = "0.9.1"
hex = "0.4.3"
rsa = { version = "0.10.0-rc.0",features = ["pem"]}
sha2 = "0.11.0-rc.0"
regex = "1.11.1"


[dev-dependencies]
tokio = { version = "1.45", features = ["full"] }
qrcode = {version = "0.14.1", features = ["svg"]}
ctor = "0.4.2"

